fix(icon-preview): grid spacing when few results

--- a/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview/icon-preview.component.scss
+++ b/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview/icon-preview.component.scss
@@ -4,7 +4,7 @@
   --container-height: 600px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  grid-template-rows: auto;
+  grid-template-rows: repeat(auto-fill, minmax(120px, 1fr));
   gap: 8px;
 
   padding: 16px 8px;
